--- a/index.html
+++ b/index.html
@@ -4,40 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CV Tareck Ouaibi - Français</title>
+  <title>Bienvenue | Welcome - Tareck Ouaibi</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <div class="p-6 max-w-4xl mx-auto bg-white rounded-2xl shadow-md">
-    <div class="text-center mb-6">
-      <img src="IMG_0251.jpeg" alt="Tareck Ouaibi" class="w-32 h-32 rounded-full mx-auto shadow-md mb-4" />
-      <h1 class="text-3xl font-bold">Tareck Ouaibi</h1>
-      <p class="text-sm text-gray-500">Ste Geneviève des Bois, France | +33 6 52 27 85 74 | tareck_ouaibi@yahoo.fr</p>
+<body class="bg-gray-100 text-gray-800 font-sans flex items-center justify-center h-screen">
+  <div class="bg-white p-8 rounded-2xl shadow-md text-center max-w-md">
+    <h1 class="text-2xl font-bold mb-4">Bienvenue / Welcome</h1>
+    <p class="mb-6">Choisis ta langue / Choose your language</p>
+    <div class="flex justify-around">
+      <a href="index.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">🇫🇷 Français</a>
+      <a href="english.html" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">🇬🇧 English</a>
     </div>
-    <section class="mb-6">
-      <h2 class="text-xl font-semibold border-b pb-1 mb-2">Profil professionnel</h2>
-      <p>Directeur général avec plus de 20 ans d'expérience dans le retail international...</p>
-    </section>
-    <section class="mb-6">
-      <h2 class="text-xl font-semibold border-b pb-1 mb-2">Expérience professionnelle</h2>
-      <ul class="list-disc pl-5 text-sm">
-        <li><strong>CEO – Carrefour Pologne (2020 – 2025)</strong>: 900 magasins, +15% CA, transformation omnicanale</li>
-        <li><strong>COO – Carrefour Roumanie (2015 – 2018)</strong>: Intégration Billa, Supeco</li>
-        <li><strong>Directeur régional – Carrefour France (2012 – 2015)</strong>: 528 magasins, Coop d’Alsace</li>
-      </ul>
-    </section>
-    <section class="mb-6">
-      <h2 class="text-xl font-semibold border-b pb-1 mb-2">Formation</h2>
-      <p>INSEAD, DEUG Mathématiques - Sciences Sociales, Paris</p>
-    </section>
-    <section class="mb-6">
-      <h2 class="text-xl font-semibold border-b pb-1 mb-2">Compétences</h2>
-      <p>Leadership stratégique, transformation omnicanale, M&A, gestion de crise...</p>
-    </section>
-    <section>
-      <h2 class="text-xl font-semibold border-b pb-1 mb-2">Langues</h2>
-      <p>Français, Anglais, Polonais, Espagnol</p>
-    </section>
   </div>
 </body>
 </html>
